// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should export proper "angular" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-container": "error",
    "testing-library/no-debug": "warn",
    "testing-library/no-dom-import": Array [
      "error",
      "angular",
    ],
    "testing-library/no-node-access": "error",
    "testing-library/no-promise-in-fire-event": "error",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-find-by": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-user-event": "warn",
  },
}
`;

exports[`should export proper "dom" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-promise-in-fire-event": "error",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-find-by": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-user-event": "warn",
  },
}
`;

exports[`should export proper "react" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-container": "error",
    "testing-library/no-debug": "warn",
    "testing-library/no-dom-import": Array [
      "error",
      "react",
    ],
    "testing-library/no-node-access": "error",
    "testing-library/no-promise-in-fire-event": "error",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-find-by": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-user-event": "warn",
  },
}
`;

exports[`should export proper "vue" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/await-async-utils": "error",
    "testing-library/await-fire-event": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-container": "error",
    "testing-library/no-debug": "warn",
    "testing-library/no-dom-import": Array [
      "error",
      "vue",
    ],
    "testing-library/no-node-access": "error",
    "testing-library/no-promise-in-fire-event": "error",
    "testing-library/no-wait-for-empty-callback": "error",
    "testing-library/prefer-find-by": "error",
    "testing-library/prefer-screen-queries": "error",
    "testing-library/prefer-user-event": "warn",
  },
}
`;
